# databallers

./: .gitignore  README.md  creacion_data_final.ipynb  exploracion_datos.ipynb  grouped_dataset.ipynb  main.py  pyproject.toml
data/: cat_files.txt
models/: naive_bayes_model.pkl  xgboostPorcentaje_model.pkl  xgboostTotal_model.pkl
notebooks/: dictionaries.ipynb  exploratory.ipynb  generaciongrafica.ipynb  graphs.ipynb  models.ipynb  models2.ipynb  optimization.ipynb
src/: app.py  config.toml  input_data.py  streamlitapp.py
src/utils/: __init__.py  prepare_data.py
