[project]
name = "databallers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "joblib>=1.5.1",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.2",
    "xgboost>=3.0.2",
]
